--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.14.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
